--- a/ejercicio-semana-3/index.html
+++ b/ejercicio-semana-3/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed top-0 w-100 z-3">
+    <nav class="navbar navbar-expand-lg bg-body-secondary position-fixed top-0 w-100 z-3">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Veterinaria Riwi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -42,6 +42,7 @@
               <a class="nav-link" href="#contacto">Contáctanos</a>
             </li>
           </ul>
+          <button onclick="cambiarTema()" class="btn rounded-fill"><i id="dl-icon" class="bi bi-moon-fill"></i></button>
         </div>
       </div>
     </nav>
@@ -116,7 +117,8 @@
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               </div>
               <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                  style="height: 100px"></textarea>
                 <label for="floatingTextarea2">Mensaje</label>
               </div>
               <div class="m-2 ">
@@ -132,7 +134,7 @@
     <div class="card-footer bg-body-secondary d-flex flex-column align-items-center ">
       <div class="p-2">
         <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram" targe></i></a>
+        <a href="https://www.instagram.com/riwi.io" target="_blank"><i class="bi bi-instagram" targe></i></a>
         <a href="https://co.linkedin.com/" target="_blank"><i class="bi bi-linkedin" targe></i></a>
         <a href="https://twitter.com/?lang=es" target="_blank"><i class="bi bi-twitter-x" targe></i></a>
       </div>
