--- a/crud/index.html
+++ b/crud/index.html
@@ -22,6 +22,30 @@
   <header></header>
 
   <main class="container ">
+    <form action="./index.html" method="post">
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="name" name="name" placeholder="name(s)" required>
+        <label for="name">name(s)</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="last-name" name="last-name"  placeholder="last name(s)" required>
+        <label for="last-name">last name(s)</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="email" name="email" placeholder="email" required>
+        <label for="email">email</label>
+      </div>
+
+      <div class="text-center ">
+        <button type="submit" class="btn btn-success ">save</button>
+        <button type="reset" class="btn btn-danger ">cancel</button>
+      </div>
+
+
+    </form>
+
     <table class="table table-striped table-hover table-bordered text-capitalize align-middle text-center caption-top ">
       <caption>List Of Coders</caption>
       <thead>
